Fix portrait alignment

--- a/templates/components/portrait/portrait.scss
+++ b/templates/components/portrait/portrait.scss
@@ -1,6 +1,6 @@
 .portrait {
-    --alf-grid-align-top: baseline;
-    --alf-grid-align-bottom: top;
+    --alf-grid-align-top: top;
+    --alf-grid-align-bottom: baseline;
 
     .image {
         img, canvas {
